--- a/Movies.API/Movies.API/Properties/launchSettings.json
+++ b/Movies.API/Movies.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Movies.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "home",
       "applicationUrl": "https://localhost:7060;http://localhost:5060",
       "environmentVariables": {
